<?xml version="1.0"?>
<package format="2">
  <name>flow_controlled_player</name>
  <version>1.0.0</version>
  <description>play from rosbag with flow control</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>

  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
</package>
